# IGTK

./: .gitignore  README.md  coding_guidelines.md  interview study agenda.md
Exercises/exercises/: CMakeLists.txt  exercises.cpp  exercises.h  quick_select.cpp  quick_select.drawio
IGTK/: ConstexprSnippets.h  IGTK.cpp  IGTK.sln  IGTK.vcxproj  IGTK.vcxproj.filters  stdafx.cpp
IGTK/IGTK_CPP17_Features_Playground/: IGTK_CPP17_Features_Playground.cpp  IGTK_CPP17_Features_Playground.vcxproj  Macros.h  MoveSemantics.h  (+8 more)
IGTKStateMachine/: Description.txt  ForwardDeclarations.hpp  GenericTransitionAction.cpp  GenericTransitionAction.h  IEventArgs.cpp  IEventArgs.h  IGTKStateMachine.cpp  IGTKStateMachine.vcxproj  IGTKStateMachine.vcxproj.filters  ITransitionAction.cpp  ITransitionAction.h  LasProcessActions.cpp  LasProcessActions.h  Logger.cpp  Logger.h  Singleton.hpp  State.cpp  State.h  StateMachine.cpp  StateMachine.h  StringEventArgs.cpp  StringEventArgs.h  Transition.cpp  Transition.h  log.txt  stdafx.cpp
IGTKUtils/IGTKThreads/: CMakeLists.txt  EcoSystem.cpp  EcoSystem.h  HyperCycle.cpp  IGTKThreads.cpp  IGTKThreads.h  Task.cpp  Task.h  components
IGTKUtils/IGTKThreads/HyperCycle/: CMakeLists.txt  HyperCycle.cpp  HyperCycle.h
IGTKUtils/IGTKThreads/HyperCycle/Tachyon/: Program.cs  Tachyon.csproj
IGTKUtils/IGTKThreads/HyperCycle/Tachyon/Properties/: AssemblyInfo.cs
IGTK_CPP17_Features_Playground/: IGTK_CPP17_Features_Playground.cpp  IGTK_CPP17_Features_Playground.vcxproj  IGTK_CPP17_Features_Playground.vcxproj.filters  MoveSemantics.cpp  MoveSemantics.h  stdafx.cpp
(+30 files in other folders)
